--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /description/
   - title: "Papers"
     url: /papers/
-  - title: "MembersXXX"
+  - title: "Members"
     url: /members/
   - blog: "Blog"
     url: /blog/
