adding a tabs dataset

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,7 @@ main:
     url: /members/
   - title: "Downloads"
     url: /downloads/
+  - title: "Datasets"
+    url: /datasets/    
   - blog: "Blog"
     url: /blog/
